--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 /* i container hanno una dimensione fissa,  centrati orizzontalmente */
 .container {
-    border: dashed 2px black;
+    
     /* test */
 
     max-width: 1000px;
@@ -18,7 +18,7 @@
 }
 
 .container-small {
-    background-color: #ee82ee;
+    
     /* test */
 
     max-width: 800px;
@@ -48,7 +48,7 @@ nav {
 }
 
 nav .container > * {
-    border: dashed 2px black;
+  
     /* test */
 
     padding: 10px;
@@ -88,7 +88,10 @@ nav .login {
 
 /* sezione hero */
 #hero {
-    background-color: #00008b;
+    background-image: url(./img/jumbo.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+   
     /* test */
 }
 
@@ -100,93 +103,107 @@ nav .login {
 
 /* fine sezione hero */
 
+/* inizio section column */
 
-/* sezioni grigie */
 .row {
     display: flex;
 }
 
 .column-big {
-    background-color: #1e90ff;
+    background-image: url(img/item2.svg);
+    background-size:cover ;
     height: 400px;
-    border: dashed 2px black;
-    /* test */
-
-    /* width: 60%; */
     flex-grow: 1;
 }
 
 .column-small {
+   
+    height: 400px;
+   
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    width: 400px;
+}
+
+.column-big-two{
+    background-image: url(img/item3.svg);
+    background-size:cover ;
+    height: 400px;
+  
+    flex-grow: 1;
+}
+
+.column-small-two{
     background-color: #ffc0cb;
     height: 400px;
-    border: dashed 2px black;
-    /* test */
-
-    /* width: 40%; */
+   
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
     width: 400px;
+
 }
 
 
 .big-content {
-    background-color: #228b22;
+    background-image: url(img/item4-big.svg);
+    background-size:cover ;
     height: 600px;
-    /* test */
+ 
 }
-/* fine sezioni grigie */
+
+
 
 
 /* sezione footer */
 
+
+
 footer {
-    background-color: #23272a;
-    /* test */
+    background-color: white;
+    display: flex;
+    padding: 50px;
+    flex-wrap: wrap;
 
-    padding-top: 8px;
+    border: 1px solid white;
 }
 
 
-footer .container > * {
-    border: dashed 2px white;
-    /* test */
-}
+
 
 
 footer #footer-top {
-    margin-bottom: 30px;
+    padding: 30px;
+    border: 1px solid white;
+    display: flex;
+    flex-direction: column;
 }
 
-footer #footer-top .footer-links {
-    background-color: #f08080;
-    height: 500px;
-    width: 250px;
-    /* test */
+#footer-block{
+    padding: 40px;
+    border: 1px solid white;
+
 }
 
-footer #footer-top .footer-column {
-    background-color: #20b2aa;
-    /* test */
-    
-    flex-grow: 1;
-}
 
-footer #footer-bottom {
+
+
+
+
+footer #footer-end {
     background-color: #7fffd4;
-    /* test */
-
-    margin-top: 16px;
+    display: flex;
+    justify-content: space-between;
+    padding: 50px 0;
+    border: 1px solid white;
+    min-width: 100%;
 }
 
-footer #footer-bottom {
+footer #footer-end{
     justify-content: space-between;
 
-    padding: 16px 0;
+    padding: 50px 50px;
 }
 
-footer #footer-bottom > * {
-    background-color: #ffb6c1;
-    /* test */
 
-    padding: 4px 8px;
-}
-
-/* fine sezione footer */
